Quorum/Library/Tests/TypeChecker/Pass/ExpAssignObjectNumberField.quorum
class Main
    Object o        
    action Main
        o = cast(Object, 7.5)
        output "passed"
    end
end