Quorum/Library/Tests/TypeChecker/Fail/ExpAssignIntObjNumberField.quorum
class Main
    Integer int
    action main
        int = cast(Integer, 7.5)
    end
end